styles/style.css
* {
    font-family: "Proxima Nova - Regular", 'Lato', sans-serif;
}

*:focus {
    outline: none;
}

a {
    text-decoration: none;
    color: black;
}

body {
    margin: 0;
    padding: 0;
    display: grid;
    grid-template: 90px 40px 30px 1fr / 1fr;
    grid-template-areas:
        'header'
        'navBar'
        'route'
        'mainContent';
    height: 100vh;
}

header {
    grid-area: header;
    display: grid;
    grid-template-columns: 300px 1fr 300px;
    grid-template-areas: 'searchBar logo icons';
    border-bottom: 1px #cccccc solid;
    align-items: center;
}

.searchBar {
    grid-area: searchBar;
    margin: 0 50px;
}

/* THIS NEEDS TO BE EXTRACTED -- CURRENTLY INLINE */
.searchField {
    /* border: 0px solid; */
}

.logo {
    grid-area: logo;
    width: 140px;
    height: 58px;
    justify-self: center;
}

.iconContainer {
    grid-area: icons;
    justify-self: right;
    margin: 0 50px 0 0;
    align-content: center;
    display: flex;
    align-items: center;
}

.icon {
    margin: 10px;
    transition: transform 0.1s ease;
    transform-origin: 10%;
}

.icon:hover {
    transform: scale(1.1);
}

.currencySelect {
    margin: 0 50px 0 0;
    height: 20px;
    background-color: white;  
    border: none;
    width: 80px;
}

.navList {
    grid-area: navBar;
    padding: 10px;
    border-bottom: 1px #cccccc solid;
    margin: 0;
    display: flex;
    list-style: none;
    justify-content: center;
    align-items: center;
}

.navItem {
    margin: 0 10px;
    font-size: 16px;
}

.navItem:hover {
    text-decoration: underline;
}

.route {
    grid-area: route;
    color: #999999;
    font-size: 14px;
    margin: 16px
}

.main {
    text-align: center;
    grid-area: mainContent;
    display: grid;
    grid-template-columns: 6fr 5fr;
    grid-template-areas: 'productDisplay productForm'
}

.productDisplay {
    grid-area: productDisplay;
    margin: 10%;
    display: grid;
    grid-template: 1fr 50px / 20px 1fr 20px;
    grid-template-areas: 
        'leftArrow productImage rightArrow'
        '. productThumbnail .';
}

.leftArrow {
    grid-area: leftArrow;
    align-self: center;
}

.rightArrow {
    grid-area: rightArrow;
    align-self: center;
}

.productImage {
    grid-area: productImage;
    width: 100%;
    height: auto;
}

.productThumbnail {
    grid-area: productThumbnail;
    width: 100px;
    height: 100px;
    border: 3px solid #250858;
    justify-self: center;
    margin: 80px 0;
}
/* TODO: LINE UP ARROWS AROUND PRODUCT IMAGE */
.productForm {
    grid-area: productForm;
    border: 1px solid blue;
    display: grid;
}

.productHeader {
}

